[package]
name = "kvs"
version = "0.1.0"
authors = ["radogost"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
lazy_static = "1.4"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
tempfile = "3.0.7"
walkdir = "2.2.7"
